--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.16.0"
+    "react-native-screens": "^4.16.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@expo/cli": "^54.0.16",
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.1.17",
-    "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.9.2"
   },
