--- a/eas.json
+++ b/eas.json
@@ -1,24 +1,24 @@
 {
-  "cli": {
-    "version": ">= 16.26.0",
-    "appVersionSource": "remote"
-  },
-  "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
-      "distribution": "internal"
-    },
-    "production": {
-      "autoIncrement": true,
-			"android": {
-        "buildType": "apk"
-      }
-    }
-  },
-  "submit": {
-    "production": {}
-  }
+	"cli": {
+		"version": ">= 16.26.0",
+		"appVersionSource": "remote"
+	},
+	"build": {
+		"development": {
+			"developmentClient": true,
+			"distribution": "internal",
+			"node": "20.19.4"
+		},
+		"preview": {
+			"distribution": "internal",
+			"node": "20.19.4"
+		},
+		"production": {
+			"autoIncrement": true,
+			"node": "20.19.4"
+		}
+	},
+	"submit": {
+		"production": {}
+	}
 }
