--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "firebase": "^12.5.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.28.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.16.0",
+    "react-native-screens": "~4.16.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
